# wifi-diagnostics-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
deploy/systemd/: wifi-diagnostics-mcp.env.example  wifi-diagnostics-mcp.service.template
scripts/: deploy_remote.sh  install_systemd_service.sh  run_server.sh
src/wifi_diagnostics_mcp/: __init__.py  analytics.py  config.py  models.py  receiver.py  reparse_raw_syslog.py  server.py  service.py  storage.py  vendor_detection.py
src/wifi_diagnostics_mcp/mcp/: __init__.py  prompts.py  resources.py  tools.py
src/wifi_diagnostics_mcp/parsers/: __init__.py  base.py  cisco.py  generic.py  netgear.py
tests/: test_analytics.py  test_cisco_parser.py  test_netgear_parser.py  test_service.py  test_storage.py  test_tools.py
