[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-diagnostics-mcp"
version = "0.1.0"
description = "Wi-Fi diagnostics focused MCP server with syslog ingestion for Cisco and Netgear devices."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Osamu Noguchi" }
]
dependencies = []

[project.scripts]
wifi-diagnostics-mcp = "wifi_diagnostics_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
